# paint

./: Makefile.am  NOTICE  README.md  autogen.sh  configure.ac  esrille-paint.spec.in
debian/: changelog  changelog.in  control  copyright
docs/: Makefile.am  index.html  md2html.py  update
docs/en/: Makefile.am  index.html  index.md  install.html  install.md  template.html  usage.html  usage.md
docs/figures/: Makefile.am
docs/ja/: Makefile.am  default.css  index.html  index.md  install.html  install.md  template.html  update  usage.html  usage.md
icons/: Makefile.am
po/: POTFILES.in  esrille-paint.pot  it.po  ja.po
src/: Makefile.am  application.py  esrille-paint.desktop.in  esrille-paint.in.in  main.py  package.py.in.in  paint.py  window.py
src/resources/: Makefile.am  esrille-paint.gresource.xml
src/resources/css/: esrille-paint.css
src/resources/gtk/: menu.ui
src/resources/ui/: new-dialog.glade
